--- a/package.json
+++ b/package.json
@@ -15,15 +15,12 @@
     "url": "https://github.com/txfs19260817/bangumi-shared-book-collections"
   },
   "private": true,
-  "dependencies": {
-    "@trim21/gm-fetch": "^0.0.3"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-typescript": "^7.18.6",
     "@types/greasemonkey": "^4.0.3",
-    "@types/jquery": "^3.5.14",
     "babel-loader": "^8.2.5",
     "browserslist": "^4.21.3",
     "css-loader": "^6.7.1",
