--- a/package.json
+++ b/package.json
@@ -17,22 +17,22 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.24.4",
-    "@babel/preset-env": "^7.24.4",
-    "@babel/preset-typescript": "^7.24.1",
+    "@babel/core": "^7.28.3",
+    "@babel/preset-env": "7.28.3",
+    "@babel/preset-typescript": "^7.27.1",
     "@types/greasemonkey": "^4.0.7",
-    "babel-loader": "^9.1.3",
-    "browserslist": "^4.23.0",
-    "css-loader": "^6.8.1",
-    "less": "^4.2.0",
-    "less-loader": "^11.1.3",
-    "style-loader": "^3.3.3",
-    "typescript": "^5.4.3",
-    "userscript-metadata-webpack-plugin": "^0.4.0",
-    "webpack": "^5.91.0",
+    "babel-loader": "^10.0.0",
+    "browserslist": "^4.25.4",
+    "css-loader": "^7.1.2",
+    "less": "^4.4.1",
+    "less-loader": "^12.3.0",
+    "style-loader": "^4.0.0",
+    "typescript": "^5.9.2",
+    "userscript-metadata-webpack-plugin": "^0.4.2",
+    "webpack": "^5.101.3",
     "webpack-bundle-analyzer": "^4.10.2",
-    "webpack-cli": "^5.1.4",
+    "webpack-cli": "^6.0.1",
     "webpack-livereload-plugin": "^3.0.2",
-    "webpack-merge": "^5.10.0"
+    "webpack-merge": "^6.0.1"
   }
 }
